# ai-teaches-cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.en.md  README.md
01-basics/: 02_variables-practice.cpp  02_variables.cpp  03_operators-practice.cpp  03_operators.cpp  04_io-practice.cpp  04_io.cpp  hell2.cpp  hello.cpp
02-control-flow/: 01_if_switch-practice.cpp  01_if_switch.cpp  02_loops-practice.cpp  02_loops.cpp
03-functions/: 01_functions-practice.cpp  01_functions.cpp  02_parameters-practice.cpp  02_parameters.cpp
